--- a/index.html
+++ b/index.html
@@ -3,26 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod - Music Player</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <title>VyrizPod - Your Music Player</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Add Font Awesome CDN for the icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <!-- Welcome Screen -->
-    <div id="welcome-screen" class="welcome-screen">
-        <h1>Welcome to VyrizPod</h1>
-        <p>Your ultimate music experience</p>
-    </div>
-
-    <!-- Music Player -->
-    <div class="player-container" id="player-container">
-        <div class="album-art-container">
-            <!-- Updated the image link here -->
-            <img id="album-art" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art">
-        </div>
+    <div class="player-container">
+        <img src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art" id="album-art">
 
         <div class="song-info">
             <h2 class="song-title" id="song-title">Duvidha</h2>
@@ -30,7 +17,6 @@
         </div>
 
         <div class="controls">
-            <!-- Updated buttons with icons -->
             <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
             <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
@@ -41,13 +27,10 @@
         </div>
     </div>
 
-    <!-- Audio Player -->
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
-    <!-- Font Awesome CDN for the icons -->
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
 
-    <!-- Custom JS -->
-    <script src="script.js"></script>
 </body>
 </html>
