--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>VyrizPod - Music Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Welcome Screen -->
@@ -17,7 +19,6 @@
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <!-- Updated Album Art -->
             <img 
                 id="album-art" 
                 src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" 
@@ -43,9 +44,6 @@
 
     <!-- Audio Player -->
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
-
-    <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
