--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>VyrizPod - Music Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <div id="welcome-screen" class="welcome-screen">
@@ -14,37 +14,28 @@
     </div>
 
     <div id="main-content" style="display: none;">
-        <div class="container">
-            <div class="left-panel">
-                <div class="search-bar">
-                    <input type="text" id="searchInput" placeholder="Search for songs...">
-                    <button id="searchButton"><i class="fas fa-search"></i></button>
-                </div>
-                <div id="song-list"></div>
+        <div class="search-bar">
+            <input type="text" id="searchInput" placeholder="Search for songs...">
+            <button id="searchButton">Search</button>
+        </div>
+
+        <div id="song-list"></div>
+
+        <div class="player-container" id="player-container">
+            <div class="album-art-container">
+                <img id="album-art" src="" alt="Album Art" class="album-art">
             </div>
-            <div class="right-panel">
-                <div class="player-container" id="player-container">
-                    <div class="album-art-container">
-                        <img id="album-art" src="" alt="Album Art" class="album-art">
-                    </div>
-                    <div class="song-info">
-                        <h2 class="song-title" id="song-title"></h2>
-                        <p class="artist-name" id="artist-name"></p>
-                    </div>
-                    <div class="controls">
-                        <button class="control-button" id="prevBtn"><i class="fas fa-backward"></i></button>
-                        <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
-                        <button class="control-button" id="nextBtn"><i class="fas fa-forward"></i></button>
-                    </div>
-                    <div class="progress-container">
-                        <div class="progress-bar">
-                            <div class="progress"></div>
-                        </div>
-                        <div class="time-container">
-                            <span id="current-time">0:00</span> / <span id="duration">0:00</span>
-                        </div>
-                    </div>
-                </div>
+            <div class="song-info">
+                <h2 class="song-title" id="song-title"></h2>
+                <p class="artist-name" id="artist-name"></p>
+            </div>
+            <div class="controls">
+                <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
+                <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
+                <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
+            </div>
+            <div class="progress-bar">
+                <div class="progress"></div>
             </div>
         </div>
         <audio id="audioPlayer"></audio>
