--- a/index.html
+++ b/index.html
@@ -3,55 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>VyrizPod - Music Player</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- Welcome Screen -->
-    <div id="welcome-screen">
-        <h1>Welcome to My Music Player!</h1>
-        <p>Loading your favorite tunes...</p>
+    <div id="welcome-screen" class="welcome-screen">
+        <h1>VyrizPod</h1>
+        <p>Loading your favorite songs...</p>
+    </div>
+
+    <!-- Search Bar -->
+    <div id="search-bar" class="search-bar">
+        <input type="text" id="search-input" placeholder="Search for songs..." class="search-input">
+        <button id="search-btn" class="search-btn"><i class="fas fa-search"></i></button>
+    </div>
+
+    <!-- Homepage with Songs List -->
+    <div id="songs-list" class="songs-list">
+        <h2>All Songs</h2>
+        <div id="song-items" class="song-items"></div>
     </div>
 
     <!-- Music Player -->
-    <div id="player-container" class="hidden">
-        <!-- Song Details -->
-        <div id="song-details">
-            <h2 id="song-title">Song Title</h2>
-            <p id="artist-name">Artist Name</p>
-        </div>
-        
-        <!-- Player Controls -->
-        <div id="player-controls">
-            <button id="prevBtn"><i class="fas fa-backward"></i></button>
-            <button id="playBtn"><i class="fas fa-play"></i></button>
-            <button id="nextBtn"><i class="fas fa-forward"></i></button>
+    <div class="player-container" id="player-container">
+        <div class="song-info">
+            <h2 class="song-title" id="song-title">Duvidha</h2>
+            <p class="artist-name" id="artist-name">Lucke</p>
         </div>
 
-        <!-- Progress Bar -->
-        <div id="progress-container">
-            <input type="range" class="progress" value="0" max="100">
-            <div class="progress-bar"></div>
+        <div class="controls">
+            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
+            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
+            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
         </div>
 
-        <!-- Volume Control -->
-        <input type="range" id="volume-control" min="0" max="100" value="100">
-
-        <!-- Lyrics Button -->
-        <button id="lyricsBtn"><i class="fas fa-music"></i> Lyrics</button>
-    </div>
-
-    <!-- Lyrics Modal -->
-    <div id="lyrics-modal" class="lyrics-modal">
-        <div class="lyrics-content">
-            <span id="close-lyrics" class="close-lyrics">&times;</span>
-            <h3 id="lyrics-title">Lyrics</h3>
-            <pre id="lyrics-text"></pre>
+        <div class="progress-bar">
+            <div class="progress"></div>
         </div>
     </div>
 
+    <!-- Audio Player -->
     <audio id="audioPlayer"></audio>
 
+    <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
 </html>
