--- a/index.html
+++ b/index.html
@@ -1,69 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod - Music Player</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Music Platform</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Welcome Screen -->
-    <div id="welcome-screen" class="welcome-screen">
-        <h1>Welcome to VyrizPod</h1>
+  <button class="dark-mode" onclick="toggleDarkMode()">Dark Mode</button>
+
+  <div class="container">
+    <div class="search-bar">
+      <input type="text" id="search" placeholder="Search for songs..." oninput="filterSongs()">
+      <button>🔍</button>
     </div>
 
-    <!-- Dark Mode Toggle -->
-    <button id="dark-mode-toggle" class="dark-mode-toggle">Dark Mode</button>
+    <h1>All Songs</h1>
 
-    <!-- Search Bar -->
-    <div id="search-bar" class="search-bar">
-        <input type="text" id="search-input" placeholder="Search for songs..." class="search-input">
-        <button id="search-btn" class="search-btn"><i class="fas fa-search"></i></button>
+    <div id="songs-list">
+      <!-- Songs will be dynamically loaded here -->
     </div>
 
-    <!-- Songs List Section -->
-    <div id="songs-list" class="songs-list">
-        <h2>All Songs</h2>
-        <div id="song-items" class="song-items">
-            <!-- Songs will dynamically load here -->
-        </div>
+    <div class="player">
+      <h2 id="song-title">Select a Song</h2>
+      <audio id="audio-player" controls></audio>
     </div>
+  </div>
 
-    <!-- Music Player -->
-    <div class="player-container" id="player-container">
-        <div class="player-top">
-            <img src="" alt="Album Art" class="album-art" id="album-art">
-            <div class="song-info">
-                <h2 class="song-title" id="song-title">Song Title</h2>
-                <p class="artist-name" id="artist-name">Artist</p>
-            </div>
-        </div>
-
-        <div class="controls">
-            <button class="control-button" id="shuffleBtn"><i class="fas fa-random"></i></button>
-            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
-            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
-            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
-            <button class="control-button" id="repeatBtn"><i class="fas fa-redo"></i></button>
-        </div>
-
-        <!-- Progress Bar -->
-        <div class="progress-bar" id="progress-bar">
-            <div class="progress" id="progress"></div>
-        </div>
-
-        <!-- Volume Control -->
-        <div class="volume-control">
-            <label for="volume-control"><i class="fas fa-volume-up"></i></label>
-            <input type="range" id="volume-control" min="0" max="100" value="50">
-        </div>
-    </div>
-
-    <!-- Audio Player -->
-    <audio id="audioPlayer"></audio>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
