--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Platform</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <title>Music App</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <button class="dark-mode" onclick="toggleDarkMode()">Dark Mode</button>
+  <div id="welcome-screen" class="welcome-screen">
+    <h1>Welcome to Music App</h1>
+    <button onclick="enterApp()">Enter</button>
+  </div>
 
-  <div class="container">
-    <div class="search-bar">
-      <input type="text" id="search" placeholder="Search for songs..." oninput="filterSongs()">
-      <button>🔍</button>
+  <div id="main-app" class="hidden">
+    <button id="darkModeToggle" onclick="toggleDarkMode()">Dark Mode</button>
+
+    <div id="search-bar" class="hidden">
+      <input type="text" id="search" placeholder="Search songs..." oninput="searchSongs()">
     </div>
 
     <h1>All Songs</h1>
 
     <div id="songs-list">
-      <!-- Songs will be dynamically loaded here -->
+      <!-- Song list will load dynamically -->
     </div>
 
-    <div class="player">
-      <h2 id="song-title">Select a Song</h2>
+    <div id="player">
+      <h2 id="current-song-title">Select a song</h2>
       <audio id="audio-player" controls></audio>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 </html>
